--- a/report/references.tex
+++ b/report/references.tex
@@ -22,6 +22,8 @@
   \url{http://update.maestro-wireless.com/GNSS/A2235-H/Maestro_GPS_Evaluation_Kit_EVA2235_H_User_Manual_V01.pdf}
 \bibitem{libnmea}
   \url{http://github.com/jacketizer/libnmea}
+\bibitem{x-cube-53l0a}
+  \url{http://www.st.com/content/st_com/en/products/ecosystems/stm32-open-development-environment/stm32-nucleo-expansion-boards/stm32-ode-sense-hw/x-nucleo-53l0a1.html}
   
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
