--- a/report/references.tex
+++ b/report/references.tex
@@ -24,7 +24,8 @@
   \url{http://github.com/jacketizer/libnmea}
 \bibitem{x-cube-53l0a}
   \url{http://www.st.com/content/st_com/en/products/ecosystems/stm32-open-development-environment/stm32-nucleo-expansion-boards/stm32-ode-sense-hw/x-nucleo-53l0a1.html}
-  
+\bibitem{android-service}
+  \url{https://developer.android.com/reference/android/app/Service.html}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
